# jup-mcp

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: build.sh  deploy.sh  test.sh
src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs  server.rs  utils.rs
src/tools/: execute_swap.rs  get_balance.rs  get_quote.rs  mod.rs
